objects/LBI__HoldoutGroup__c.object
<CustomObject>
    <fields>
        <fullName>LBI__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LBI__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LBI__TotalAccountsHeld__c</fullName>
        <label>Total Accounts Held</label>
        <summaryForeignKey>LBI__Holdout__c.LBI__HoldoutGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Holdout Group</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HOG-{000000}</displayFormat>
        <label>Holdout Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holdout Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>